--- a/src/main/resources/templates/update_bank.html
+++ b/src/main/resources/templates/update_bank.html
@@ -9,7 +9,7 @@
 <div align="center">
     <h1>Изменить даныые о сотруднике</h1>
     <br />
-    <form action="#" th:action="@{/addBank}" th:object="${bank}"
+    <form action="#" th:action="@{/updateBank}" th:object="${bank}"
           method="post">
 
         <table border="0" cellpadding="10">
